package seedu.duke;

public abstract class Tracker {
}
